--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,19 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@drawable/login_gradient_background"
-            app:layout_constraintHeight_percent="0.4"
+            app:layout_constraintHeight_percent="0.35"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- Волнистый переход -->
+        <ImageView
+            android:id="@+id/waveTransition"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginTop="-10dp"
+            android:contentDescription="@null"
+            android:scaleType="fitXY"
+            android:src="@drawable/wave_transition"
+            app:layout_constraintTop_toBottomOf="@id/topBackground" />
 
         <!-- Логотип -->
         <ImageView
