--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="error_color">#FFB00020</color>
     <color name="success_color">#FF4CAF50</color>
     <color name="warning_color">#FFFFAB00</color>
+    <color name="orange_400">#FFA726</color>
 </resources>
