--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="orange_20_percent">#33FF5722</color>
     <color name="green_500">#4CAF50</color>
     <color name="gray_300">#E0E0E0</color>
+    <color name="light_blue">#03A9F4</color>
 </resources>
